[package]
name = "kypare"
version = "1.0.2"
edition = "2021"

[dependencies]
actix-files = "0.6.9"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.29"
rcgen = { version = "0.14.7", features = ["x509-parser", "crypto", "pem"] }
rustls = "0.23.36"
rustls-pki-types = "1.14.0"
time = "0.3.45"
